--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-tactile
+theme: jekyll-theme-midnight
 title: [Ákos Kádár]
 description: [academic page]
 show_downloads: ["false"]
